scrollbar fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -160,23 +160,3 @@ img::after {
   overflow-y: auto;
   overflow-x: hidden;
 }
-
-.scroll-x::-webkit-scrollbar,
-.scroll-y::-webkit-scrollbar {
-  width: 10px;
-}
-
-.scroll-x::-webkit-scrollbar-track,
-.scroll-y::-webkit-scrollbar-track {
-  background: #1e1e1e;
-}
-
-.scroll-x::-webkit-scrollbar-thumb,
-.scroll-y::-webkit-scrollbar-thumb {
-  background: #888;
-}
-
-.scroll-x::-webkit-scrollbar-thumb:hover,
-.scroll-y::-webkit-scrollbar-thumb:hover {
-  background: #555;
-}
